# mus-1

./: .gitignore  LAUNCH.md  README.md  __init__.py  __main__.py  approve_subjects.yaml  dev-launch.sh  download_mkv.sh  experiments_parsed.json  importlinter.ini  plan.plan.md  pyproject.toml  pytest.ini  pyvenv.cfg  requirements-plugins.private.txt  requirements-plugins.public.txt  requirements.txt  setup-dev.sh  setup.py  setup.sh  subjects_extracted.json  test_runtime_error_fix.py
.audit/: api_inventory.txt  config_bypass.txt  direct_logging.txt  importlinter.ini  importlinter.txt  inconsistent_verbs.txt  io_outside_repository.txt  mypy.txt  pylint_duplicates.txt  radon_cc.txt  ruff.txt  vulture.txt
.plugins/mus1-assembly-plugin-copperlab/temp_plugin/: README.md  pyproject.toml
.plugins/mus1-assembly-plugin-copperlab/temp_plugin/mus1_assembly_plugin_copperlab/: __init__.py  assembly.py
.plugins/mus1-assembly-plugin-copperlab/temp_plugin/mus1_assembly_plugin_copperlab/data/: Mouse Zn MASTER - 12-20 WEEKS BEHAVIOR ANIMALS (1).csv  Mouse Zn MASTER - 6-14 WEEKS BEHAVIOR ANIMALS (1).csv  Mouse Zn MASTER - BEHAVIOR RECORDS [12-20 WEEKS] (4).csv  Mouse Zn MASTER - BEHAVIOR RECORDS [6-14 weeks] (4).csv  Mouse Zn MASTER - COLONY.csv  Mouse Zn MASTER - FOUR WEEK TREATMENT.csv
.plugins/mus1-assembly-plugin-copperlab/temp_plugin/mus1_assembly_plugin_copperlab/processing/: clean_copperlab_data.json  data_cleaning.py  direct_ingest.py  run_full_pipeline.sh
Mus1_Refactor/: __main__.py  main.py
Mus1_Refactor/core/: __init__.py  data_manager.py  logging_bus.py  metadata.py  plugin_manager.py  project_manager.py  sort_manager.py  state_manager.py  theme_manager.py
Mus1_Refactor/gui/: base_view.py  experiment_view.py  main_window.py  metadata_display.py  navigation_pane.py  project_selection_dialog.py  project_view.py  subject_view.py
Mus1_Refactor/plugins/: BasicCSVPlot_plugin.py  DeepLabCutHandlerPlugin.py  DlcProjectImporterPlugin.py  GcpMoSeq2OrchestratorPlugin.py  MoSeq2ResultsViewerPlugin  Mus1TrackingAnalysisPlugin.py  NOR_plugin.py  OF_plugin.py  base_plugin.py  subject_importer_plugin.py
Mus1_Refactor/refactor notes/: Architecture.md  REFACTORING_NOTES.md  ROADMAP.md  css_migration_plan.md  current_notes.txt  deeplabcut_llm_context.txt  keypoint_moseq_context.txt  moseq2_code_dump.txt  refactoring_UI.md
Mus1_Refactor/scripts/: generate_subjects_csv.py  index_videos.py  merge_subjects_copperlab_csv.py
Mus1_Refactor/themes/: debug_processed.css  mus1.css  mus1.qss
copperlab dev/: project_state.json
copperlab_csv_all/: Mouse Zn MASTER - 6-14 WEEKS BEHAVIOR ANIMALS (1).csv
core/: __init__.py  data_manager.py  metadata.py  project_manager.py  state_manager.py
dev_plugins/mus1-assembly-plugin-copperlab/: README.md  pyproject.toml
dev_plugins/mus1-assembly-plugin-copperlab/mus1_assembly_plugin_copperlab/: assembly.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md
docs/dev/: ANNOTATION_AUDIT.md  ARCHITECTURE_CURRENT.md  Architecture.md  CHANGELOG.md  ROADMAP.md  ROADMAP_DRAFT.md
gui/: main_window.py
gui/widgets/: project_view.py
mus1/: __init__.py  __main__.py
mus1/core/: __init__.py  data_manager.py  metadata.py  project_manager.py  state_manager.py
mus1/docs/: ARCHITECTURE.md
mus1/gui/: __init__.py  main_window.py
mus1/plugins/: __init__.py  base_plugin.py
mus1/tests/: __init__.py  conftest.py  test_app.py
mus1/utils/: __init__.py  logging_config.py
plugins/: __init__.py  base_plugin.py
plugins/nor/: __init__.py  nor_analysis.py
projects/test_1/: project_state.json
tests/: __init__.py  conftest.py  keypoint_moseq_context.txt  test_core.py  utils.py
tools/: check_master_dates.py  list_subject_experiments.py
utils/: __init__.py  logging_config.py
(+104 files in other folders)
